# mycam

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp  cmake_install.cmake  config.ini  main.cpp  mf.backup  mycam
